--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,7 +46,7 @@ code {
 #login {
   box-sizing: border-box;
   background-color: lightblue;
-  position: static; 
+  position: fixed; 
   padding: 3% 0% 30% 0%; 
 }
 
@@ -80,7 +80,7 @@ border: 2px solid green;
 }
 
 @media only screen and (max-width: 1222px) {
-  #create {
+  #create, #login {
     margin: 2rem auto;
     width: 100%;
 
@@ -99,7 +99,7 @@ border: 2px solid green;
     margin: 15% auto;
     width: 50%;
 }
-#create {
+#create, #login{
   margin: 4rem auto;
   width: 100%;
 
@@ -110,7 +110,7 @@ border: 2px solid green;
   #logo {
     font-size: 3rem;
 }
-#create {
+#create, #login {
   margin: 5rem auto;
   width: 100%;
 
@@ -135,7 +135,7 @@ border: 2px solid green;
   #logo {
     font-size: 2.5rem;
 }
-#create {
+#create, #login {
   margin: 7rem auto;
   width: 100%;
 
@@ -182,7 +182,7 @@ border: 2px solid green;
     font-size: 1.8rem;
   }
   
-  #create {
+  #create, #login {
     margin: 1rem auto;
     width: 100%;
   
