--- a/client/src/index.css
+++ b/client/src/index.css
@@ -110,7 +110,7 @@ border: 2px solid green;
   #logo {
     font-size: 3rem;
 }
-#create, #login {
+#create, #login, #success {
   margin: 5rem auto;
   width: 100%;
 
@@ -135,7 +135,7 @@ border: 2px solid green;
   #logo {
     font-size: 2.5rem;
 }
-#create, #login {
+#create, #login, #success {
   margin: 7rem auto;
   width: 100%;
 
@@ -182,7 +182,7 @@ border: 2px solid green;
     font-size: 1.8rem;
   }
   
-  #create, #login {
+  #create, #login, #success {
     margin: 1rem auto;
     width: 100%;
   
@@ -195,6 +195,10 @@ border: 2px solid green;
   #accountCard {
     margin: 35% auto;
     width: 90%;
+  }
+
+  #success {
+    margin: 30% auto;
   }
   
 }
